# gba

./: .gitignore  .gitmodules  Cargo.toml
src/: cpu.rs  events.rs  gamepak.rs  gba.rs  lib.rs  main.rs  system_bus.rs  ui.rs
src/cpu/: disasm.rs  mod.rs  opcodes.rs  registers.rs
src/ui/: disasm.rs  emulation_thread.rs  mod.rs
