[package]
name = "gba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
iced = { git = "https://github.com/iced-rs/iced.git" }
log = "0.4.21"
rfd = "0.15.1"
thiserror = "2.0.12"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
