[package]
name = "gba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
log = "0.4.21"
serde_json = "1.0.140"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
test-case = "3.3.1"
iced = "0.14.0"
rfd = "0.16.0"
circular-buffer = "1.1.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
