[package]
name = "gba"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
log = "0.4.21"
serde_json = "1.0.140"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
test-case = "3.3.1"
rfd = "0.17.2"
eframe = { version = "0.33.3", features = ["persistence"] }
circular-buffer = "1.1.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
